--- a/docs/releases/release_notes/6.1.md
+++ b/docs/releases/release_notes/6.1.md
@@ -1,12 +1,19 @@
 # IP Fabric v6.1 (Burlap)
 
-!!! danger "Unreleased version"
-
-    This is an upcoming IP Fabric version, which has not been released yet and is not available for download.
-
 --8<-- "snippets/clear_browser_cache.md"
 
-## v6.1.0 (TBD)
+## v6.1.0 (February 21st, 2023)
+
+```shell
+SHA256 (ipfabric-6-1-0+11-latest.qcow2) = 3c6c3b65a1600b851b5cd86fea337d5dc810dde553a5c9ce56060c26a972b305
+MD5 (ipfabric-6-1-0+11-latest.qcow2) = bd728fea6d7edd65661ed50f206bd2fa
+SHA256 (ipfabric-6-1-0+11-latest.ova) = 4cb855242159ffa15be5d5dd55d0028171f7638c25b90be3ba509cc4e28e9d03
+MD5 (ipfabric-6-1-0+11-latest.ova) = bb9d9d132a44c382b01ae83717900f55
+SHA256 (ipfabric-update-6_1_0+11.tar.gz.sig) = 05fdfd8dbd524463028eda837b5a3aad9950dc95f191564366188fba146c8f2d
+MD5(ipfabric-update-6_1_0+11.tar.gz.sig) = 121c265ef7e93faa9dccb530e446674a
+```
+
+For the list of delivered tickets, please consult the [Low-Level Release Notes for 6.1.0](../release_notes_low-level/6.x/6.1.x/6.1.0.md).
 
 ### Noticeable changes
 
@@ -19,18 +26,52 @@
   - It is recommended to migrate from `roleId` to `roleName` for consistency and human readability.
 - During the upgrade, all snapshots -- including locked snapshots -- will be unloaded. Once the upgrade is completed, please load an existing snapshot, or perform a new discovery to populate network data in IP Fabric.
 - String table columns now support case insensitive regular expression operator and its negation.
-- Added support for FabricPath end-to-end path lookup.
+- Added a column to show if Checkpoint rules are active.
+- Removed "Technology > Spanning Tree > STP Stability" table from frontend and marked API endpoint `/tables/spanning-tree/topology` deprecated.
+  "STP instances" table can be used instead.
+- Clarified [password requirements and complexity checks](../../System_Administration/Command_Line_Interface/How_to/change_osadmin_pass.md) for the `osadmin` user.
+
+### Bug Fixes
+
+- Resolved an issue with Checkpoint rules displaying incorrect values for rule names and remarks.
+- Resolved an issue where entries are not being created for hosts when there is a routing table entry for the specific host address.
+- Resolved an issue where table privileges for non-admin users were not interpreted correctly in graphs. Non-admin users with table privileges are now able to see graphs correctly.
+- Resolved an issue where traffic shaper configured over 90Mbps incorrectly shows 3Mbps after reboot.
 
 ### Network Discovery
 
-- Palo Alto Prisma -- Added support of basic discovery (see our [feature matrix](https://matrix.ipfabric.io) for more details).
-- AWS -- The IAM policy has been updated. There are 2 more endpoints required for the discovery of AWS infrastructure. See the [Amazon Web Services](../../IP_Fabric_Settings/advanced/Vendors_API/AWS_Amazon_Web_Services.md) page.
-- Brocade -- Added support for stack.
 - Alcatel -- Added support of basic discovery (see our [feature matrix](https://matrix.ipfabric.io) for more details).
-- Policy Based Routing (PBR) -- Added support for PBR on Cisco (IOS, IOS-XE, NX-OS), FortiGate (Fortinet) and HP (Comware) devices. See [Routing](../../IP_Fabric_GUI/technology_tables/routing.md) page
-- HP Comware -- Added support for route-policies and routing protocols filter-policies. There is a known issue in case route-policy and policy-based-route have the same name, only policy-based-route will be visible in route-maps table.
+- Arista -- Updated EoL information.
+- AWS -- The IAM policy has been updated. There are 2 more endpoints required for the discovery of AWS infrastructure. See the [Amazon Web Services](../../IP_Fabric_Settings/advanced/Vendors_API/AWS_Amazon_Web_Services.md) page.
+- Brocade
+  - Added support for stack.
+  - Added EoL information.
+- Checkpoint -- Added support for NAT.
+- Cisco
+  - Added support for FabricPath in end-to-end path tracing.
+  - Updated EoL information.
+  - Viptela
+    - Device information will not be fetched if device is not successfully synchronized within the vManage.
+    - Lowered the maximum number of concurrent requests from a discovery worker to a Viptela server from 250 to 75 concurrent requests. This should decrease the workload on the Viptela server and increase its availability during the discovery process.
+- Extreme -- Updated EoL information.
+- F5
+  - Added support for discovering multiple instances on a VELOS chassis.
+  - Updated EoL information.
+- Fortinet
+  - Added support for NAT.
+  - Updated EoL information.
+- HP
+  - Updated EoL information.
+  - Comware -- Added support for route-policies and routing protocols filter-policies. There is a known issue in case route-policy and policy-based-route have the same name, only policy-based-route will be visible in route-maps table.
+- Juniper SRX -- Added support for NAT.
+- Palo Alto
+  - Added support for NAT.
+  - Updated EoL information.
+  - Prisma -- Added support of basic discovery (see our [feature matrix](https://matrix.ipfabric.io) for more details).
+- Policy Based Routing (PBR) -- Added support for PBR on Cisco (IOS, IOS-XE, NX-OS), FortiGate (Fortinet) and HP (Comware) devices. See [Routing](../../IP_Fabric_GUI/technology_tables/routing.md) page.
+- Ruckus -- Added EoL information.
 - Silver Peak -- Added support for two new login types (RADIUS and TACACS+).
-- Cisco Viptela -- When device isn't synchronized with vManage, information from configuration isn't downloaded.
+- Versa -- Added support for end-to-end path tracing with Versa SD-WAN.
 
 ### Upgrade Notices
 
