--- a/docs/releases/release_notes_low-level/6.x/6.1.x/6.1.0.md
+++ b/docs/releases/release_notes_low-level/6.x/6.1.x/6.1.0.md
@@ -1,6 +1,6 @@
 # LLRN 6.1.0
 
-These are low-level release notes for IP Fabric release `6.1.0`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release of IP Fabric contains a total of 509 issues.
+These are low-level release notes for IP Fabric release `6.1.0`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release of IP Fabric contains a total of 517 issues.
 
 ## Epics
 
@@ -154,6 +154,7 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - [NIM-9833](https://ipfabric.atlassian.net/browse/NIM-9833) -- Medium -- Parsing of BGP info broken on Fortinet
 - [NIM-9837](https://ipfabric.atlassian.net/browse/NIM-9837) -- High -- Vendor Settings API endpoint returns 422 while creating new entries on a fresh appliance
 - [NIM-9838](https://ipfabric.atlassian.net/browse/NIM-9838) -- Medium -- Cisco - Routemaps error emitting fix
+- [NIM-9850](https://ipfabric.atlassian.net/browse/NIM-9850) -- Medium -- SSO URL validation not allowing any additional parameter
 - [NIM-9851](https://ipfabric.atlassian.net/browse/NIM-9851) -- Medium -- Bugfix: commands/cisco/cdp (6.0.0-24)
 - [NIM-9853](https://ipfabric.atlassian.net/browse/NIM-9853) -- Medium -- ArubaCX - Unable to get configuration file (Command incomplete)
 - [NIM-9854](https://ipfabric.atlassian.net/browse/NIM-9854) -- Medium -- Bugfix: commands/cisco/memory (6.0.0-24)
@@ -237,6 +238,7 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - [NIM-10069](https://ipfabric.atlassian.net/browse/NIM-10069) -- Highest -- QA: Forcepoint implementation doesn't work
 - [NIM-10072](https://ipfabric.atlassian.net/browse/NIM-10072) -- High -- No permissions after Clear DB even when logged-in as admin
 - [NIM-10075](https://ipfabric.atlassian.net/browse/NIM-10075) -- Medium -- Checkpoint BGP Uptime Parsing Error
+- [NIM-10080](https://ipfabric.atlassian.net/browse/NIM-10080) -- Highest -- Inconsistent behaviour between tables and graphs for users with Role without AttributePolicy
 - [NIM-10088](https://ipfabric.atlassian.net/browse/NIM-10088) -- Medium -- DHCP relay information from vManage
 - [NIM-10098](https://ipfabric.atlassian.net/browse/NIM-10098) -- Medium -- License collection for Cisco ASR-9K
 - [NIM-10104](https://ipfabric.atlassian.net/browse/NIM-10104) -- Medium -- Bugfix: commands/cisco/_nxos/environmentFexAll (6.0.0-24)
@@ -246,6 +248,7 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - [NIM-10116](https://ipfabric.atlassian.net/browse/NIM-10116) -- Medium -- Bugfix: commands/juniper/_junos/configurationInterfacesSampling (6.0.0-24)
 - [NIM-10118](https://ipfabric.atlassian.net/browse/NIM-10118) -- Medium -- Do not remove API tokens with clear DB keep settings option
 - [NIM-10126](https://ipfabric.atlassian.net/browse/NIM-10126) -- Medium -- PBR - Cisco set default interface has incorrect type
+- [NIM-10132](https://ipfabric.atlassian.net/browse/NIM-10132) -- Medium -- Potential race condition when creating user
 - [NIM-10134](https://ipfabric.atlassian.net/browse/NIM-10134) -- Medium -- Cisco NX-OS - Broken parsing of route-maps
 - [NIM-10135](https://ipfabric.atlassian.net/browse/NIM-10135) -- Low -- QA: API Documentation URL's not update
 - [NIM-10142](https://ipfabric.atlassian.net/browse/NIM-10142) -- Medium -- Bugfix: commands/hp/_aruba/ap/debugLacpApName (6.0.0-24)
@@ -259,6 +262,7 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - [NIM-10165](https://ipfabric.atlassian.net/browse/NIM-10165) -- Medium -- PBR type pbrIpv4Nexthops doesn't work on Comware
 - [NIM-10169](https://ipfabric.atlassian.net/browse/NIM-10169) -- Medium -- Discovery doesn't stop
 - [NIM-10173](https://ipfabric.atlassian.net/browse/NIM-10173) -- Medium -- Bugfix: commands/cisco/_meraki/v1/devices/switch/ports/statuses (6.0.0-24)
+- [NIM-10175](https://ipfabric.atlassian.net/browse/NIM-10175) -- Highest -- SSO users don't get admin rights when in admin role
 - [NIM-10178](https://ipfabric.atlassian.net/browse/NIM-10178) -- Medium -- Bugfix: commands/cisco/_meraki/v1/devices/switch/routing/interfaces (6.0.0-24)
 - [NIM-10179](https://ipfabric.atlassian.net/browse/NIM-10179) -- Medium -- Bugfix: commands/cisco/_meraki/v1/organizations/devices/statuses (6.0.0-24)
 - [NIM-10180](https://ipfabric.atlassian.net/browse/NIM-10180) -- Medium -- Cisco NX-OS Routemaps - empty result
@@ -274,6 +278,7 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - [NIM-10221](https://ipfabric.atlassian.net/browse/NIM-10221) -- Medium -- Bugfix: commands/hp/_arubacx/vsfDetail (6.0.0-24)
 - [NIM-10222](https://ipfabric.atlassian.net/browse/NIM-10222) -- Medium -- Bugfix: commands/cisco/vrrpv3 (6.0.0-24)
 - [NIM-10224](https://ipfabric.atlassian.net/browse/NIM-10224) -- Medium -- Bugfix: commands/cisco/rip/interfaces (6.0.0-24)
+- [NIM-10233](https://ipfabric.atlassian.net/browse/NIM-10233) -- High -- pbr action pbrIpv4Nexthops doesn't work
 - [NIM-10234](https://ipfabric.atlassian.net/browse/NIM-10234) -- Medium -- Bugfix: commands/checkpoint/_gaia/assetAll (6.0.0-24)
 - [NIM-10250](https://ipfabric.atlassian.net/browse/NIM-10250) -- High -- Check Point's 1530 Appliance R80.20.25 - Build 123 parsing issue
 - [NIM-10254](https://ipfabric.atlassian.net/browse/NIM-10254) -- Medium -- Bugfix: commands/brocade/_fastiron/span (6.0.0-24)
@@ -296,6 +301,7 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - [NIM-10334](https://ipfabric.atlassian.net/browse/NIM-10334) -- Medium -- Bugfix: commands/cisco/_meraki/v1/networks/devices/wireless/status (6.0.0-24)
 - [NIM-10336](https://ipfabric.atlassian.net/browse/NIM-10336) -- Medium -- DNAT - translated packed isn't correctly shown in gui
 - [NIM-10337](https://ipfabric.atlassian.net/browse/NIM-10337) -- Medium -- Bugfix: commands/cisco/hosts (6.0.0-24)
+- [NIM-10340](https://ipfabric.atlassian.net/browse/NIM-10340) -- Highest -- Record duplicates in vEox after migration to 6.1
 - [NIM-10341](https://ipfabric.atlassian.net/browse/NIM-10341) -- Medium -- Bugfix: commands/juniper/_mist/v1/organizations/stats/devices (6.0.0-24)
 - [NIM-10346](https://ipfabric.atlassian.net/browse/NIM-10346) -- Medium -- Bugfix: commands/cisco/monitor/sessionAll (6.0.0-24)
 - [NIM-10368](https://ipfabric.atlassian.net/browse/NIM-10368) -- Highest -- Node collapse doesn't work
@@ -349,6 +355,7 @@ Task may be associated into Epics or Stories to form complex features.
 - [NIM-9000](https://ipfabric.atlassian.net/browse/NIM-9000) -- Medium -- Adopt eslint-plugin-jira-ticket-todo-comment
 - [NIM-9024](https://ipfabric.atlassian.net/browse/NIM-9024) -- Medium -- UI Accordion
 - [NIM-9052](https://ipfabric.atlassian.net/browse/NIM-9052) -- High -- Add roleName option to SSO mapping
+- [NIM-9056](https://ipfabric.atlassian.net/browse/NIM-9056) -- Medium -- Versa - reconstruct MPLS table for label to VRF entries
 - [NIM-9057](https://ipfabric.atlassian.net/browse/NIM-9057) -- Medium -- UI/UX Policy Based Routing - Security tree
 - [NIM-9058](https://ipfabric.atlassian.net/browse/NIM-9058) -- Medium -- UI/UX PBR / NAT- Path inspector
 - [NIM-9059](https://ipfabric.atlassian.net/browse/NIM-9059) -- Medium -- UI/UX NAT - Security tree
@@ -458,6 +465,7 @@ Task may be associated into Epics or Stories to form complex features.
 - [NIM-9782](https://ipfabric.atlassian.net/browse/NIM-9782) -- High -- Update top bar to use brand colors
 - [NIM-9788](https://ipfabric.atlassian.net/browse/NIM-9788) -- Medium -- Update role name validation error formatting
 - [NIM-9789](https://ipfabric.atlassian.net/browse/NIM-9789) -- High -- Vendor api clients to limit number of login attempts
+- [NIM-9793](https://ipfabric.atlassian.net/browse/NIM-9793) -- Medium -- Review definition of host/endpoint - relax the routing table rule if /32
 - [NIM-9794](https://ipfabric.atlassian.net/browse/NIM-9794) -- Medium -- F5 VELOS - unable to discover multiple F5 on single chassis
 - [NIM-9810](https://ipfabric.atlassian.net/browse/NIM-9810) -- Medium -- Start rotating refresh token after use
 - [NIM-9815](https://ipfabric.atlassian.net/browse/NIM-9815) -- High -- Change "rediscover timed out devices" to "rediscover devices with command timeout"
