--- a/docs/releases/release_notes/6.1.md
+++ b/docs/releases/release_notes/6.1.md
@@ -30,6 +30,7 @@ For the list of delivered tickets, please consult the [Low-Level Release Notes f
 - Removed "Technology > Spanning Tree > STP Stability" table from frontend and marked API endpoint `/tables/spanning-tree/topology` deprecated.
   "STP instances" table can be used instead.
 - Clarified [password requirements and complexity checks](../../System_Administration/Command_Line_Interface/How_to/change_osadmin_pass.md) for the `osadmin` user.
+- Added a hard limit on number of retries for all http based vendor API discovery (except AWS). These are triggered when vendor API server is assumed to be overloaded.
 
 ### Bug Fixes
 
