--- a/docs/releases/release_notes_low-level/6.x/6.1.x/6.1.0.md
+++ b/docs/releases/release_notes_low-level/6.x/6.1.x/6.1.0.md
@@ -1,6 +1,6 @@
 # LLRN 6.1.0
 
-These are low-level release notes for IP Fabric release `6.1.0`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release of IP Fabric contains a total of 517 issues.
+These are low-level release notes for IP Fabric release `6.1.0`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release of IP Fabric contains a total of 518 issues.
 
 ## Epics
 
@@ -305,6 +305,7 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - [NIM-10341](https://ipfabric.atlassian.net/browse/NIM-10341) -- Medium -- Bugfix: commands/juniper/_mist/v1/organizations/stats/devices (6.0.0-24)
 - [NIM-10346](https://ipfabric.atlassian.net/browse/NIM-10346) -- Medium -- Bugfix: commands/cisco/monitor/sessionAll (6.0.0-24)
 - [NIM-10368](https://ipfabric.atlassian.net/browse/NIM-10368) -- Highest -- Node collapse doesn't work
+- [NIM-10383](https://ipfabric.atlassian.net/browse/NIM-10383) -- Medium -- Bugfix: commands/cisco/mac (6.0.0-24)
 - [DOS-841](https://ipfabric.atlassian.net/browse/DOS-841) -- Medium -- nimpee-api service on jupee.ipf.cx is not starting
 - [DOS-844](https://ipfabric.atlassian.net/browse/DOS-844) -- Medium -- Jumphost public key is missing
 - [DOS-847](https://ipfabric.atlassian.net/browse/DOS-847) -- Medium -- Update nimpee-net-config help
