--- a/docs/releases/release_notes_low-level/6.x/6.1.x/6.1.0.md
+++ b/docs/releases/release_notes_low-level/6.x/6.1.x/6.1.0.md
@@ -1,6 +1,6 @@
 # LLRN 6.1.0
 
-These are low-level release notes for IP Fabric release `6.1.0`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release of IP Fabric contains a total of 518 issues.
+These are low-level release notes for IP Fabric release `6.1.0`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release of IP Fabric contains a total of 519 issues.
 
 ## Epics
 
@@ -413,6 +413,7 @@ Task may be associated into Epics or Stories to form complex features.
 - [NIM-9487](https://ipfabric.atlassian.net/browse/NIM-9487) -- Medium -- Recompose .scss files
 - [NIM-9488](https://ipfabric.atlassian.net/browse/NIM-9488) -- Medium -- CLI node testing on non-standard port
 - [NIM-9489](https://ipfabric.atlassian.net/browse/NIM-9489) -- Medium -- Create tool for shrinking snapshots used in E2E tests
+- [NIM-9490](https://ipfabric.atlassian.net/browse/NIM-9490) -- Highest -- Limit maximum retries in vendor API clients when a server is overloaded
 - [NIM-9492](https://ipfabric.atlassian.net/browse/NIM-9492) -- High -- UX Add policy dialog - make API endpoint scope as a default selection
 - [NIM-9496](https://ipfabric.atlassian.net/browse/NIM-9496) -- Medium -- Remove serviceNamePorts from utils global export
 - [NIM-9497](https://ipfabric.atlassian.net/browse/NIM-9497) -- Medium -- Improve format of table columns in OAS
