Pages tagged `draft` are not going to be built

--- a/docs/releases/release_notes/6.2.md
+++ b/docs/releases/release_notes/6.2.md
@@ -1,3 +1,7 @@
+---
+tags: ["draft"]
+---
+
 # IP Fabric v6.2 (Camlet)
 
 !!! danger "Unreleased version"
@@ -10,9 +14,7 @@
 
 ### Noticeable changes
 
-
 ### Network Discovery
-
 
 ### Upgrade Notices
 
